infra/environments/alpa-prod/geoblockOverride.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress-geoblock
  annotations:
    kubernetes.io/ingress.class: "kong"
    konghq.com/protocols: "https"
    kubernetes.io/tls-acme: "true"
    konghq.com/https-redirect-status-code: "301"
    # reference production issuer
    cert-manager.io/cluster-issuer: "letsencrypt-issuer-kong"
    konghq.com/override: geoblock-routing-backend
spec:
  tls:
  - hosts:
    - api.alpacasino.io
    secretName: backend-cert-secret
  rules:
  - host: api.alpacasino.io
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: geoblock-static
              port:
                number: 80
